src/test/deca/codegen/valid/test_method_call5.deca
// Description:
//    Programme testant l'appel de méthode
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//    10
//
// Historique:
//    cree le 20/01/2021

class A {
    void test(int i) {
        println(i);
    }
}

{
    A a = new A();

    a.test(10);
}