src/test/deca/codegen/invalid/method_call.deca
// Description:
//    Appel d'une méthode qui n'a pas de valeur de retour
//
// Resultats:
//   Erreur : Sortie de la fonction A.test sans instruction de retour
//

class A {
    int test() {

    }
}

{
    A a = new A();
    a.test();
}